--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
               <nav>
                 <ul>
                   <li class=" ">
-                    <a href="home-1.html">Home</a>
+                    <a href="index.html">Home</a>
                   </li>
                   <li><a href="about.html">About Us</a></li>
                   <li class=" ">
