Few changes from the pdf are done

--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
                 <div class="mil-mb-90">
                   <h2 class="mil-upper mil-up mil-mb-30">Company Overview</h2>
                   <p class="mil-up">
-                    Below that add this - At Perspective Design, we combine
+                    At Perspective Design, we combine
                     creativity, uniqueness, and a futuristic vision to redefine
                     spaces.
                   </p>
@@ -560,7 +560,7 @@
                         </div>
                         <h4 class="mil-upper mil-mb-30">Durability</h4>
                         <p>
-                          Protection for materials, 3 interiors, and finishes.
+                          Protection for materials, interiors, and finishes.
                         </p>
                       </div>
                     </div>
