--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
               <div class="col-lg-6">
                 <div>
                   <span class="mil-suptitle mil-upper mil-up mil-mb-30"
-                    >Perspective Purpuse</span
+                    >Perspective PurpoShop Drawings Supervisionse</span
                   >
                   <h2 class="mil-upper mil-up mil-mb-40">
                     Transforming Spaces, Enriching Lives
@@ -788,7 +788,7 @@
                   </div>
                   <h4 class="mil-upper mil-mb-20">Durability</h4>
                   <div class="mil-divider-sm mil-mb-20"></div>
-                  <p>Protection for materials, 3 interiors, and finishes.</p>
+                  <p>Protection for materials, interiors, and finishes.</p>
                 </div>
               </div>
               <div class="col-lg-4">
@@ -818,7 +818,7 @@
                   </div>
                   <h4 class="mil-upper mil-mb-20">Sustainability</h4>
                   <div class="mil-divider-sm mil-mb-20"></div>
-                  <p>Lower carbon emissions and 6 peak energy usage.</p>
+                  <p>Lower carbon emissions and peak energy usage.</p>
                 </div>
               </div>
             </div>
