--- a/project11.html
+++ b/project11.html
@@ -191,7 +191,7 @@
                 </ul>
               </div>
               <div class="col-lg-3">
-                <h6 class="mil-upper mil-up mil-mb-30">Square Feet</h6>
+                <h6 class="mil-upper mil-up mil-mb-30">Square meter</h6>
                 <ul class="mil-list mil-dark mil-up mil-mb-60">
                   <li>230 m²</li>
                 </ul>
@@ -208,7 +208,7 @@
                 </ul>
               </div>
               <div class="col-lg-3">
-                <h6 class="mil-upper mil-up mil-mb-30">Project manager</h6>
+                <h6 class="mil-upper mil-up mil-mb-30">Client</h6>
                 <ul class="mil-list mil-dark mil-up mil-mb-30">
                   <li>Ms. Ashwag Al Amri</li>
                 </ul>
