--- a/project3.html
+++ b/project3.html
@@ -190,7 +190,7 @@
                 </ul>
               </div>
               <div class="col-lg-3">
-                <h6 class="mil-upper mil-up mil-mb-30">Square Feet</h6>
+                <h6 class="mil-upper mil-up mil-mb-30">Square meter</h6>
                 <ul class="mil-list mil-dark mil-up mil-mb-60">
                   <li>2000 m²</li>
                 </ul>
