--- a/team.html
+++ b/team.html
@@ -122,10 +122,10 @@
           <div class="container mil-p-120-60">
             <div class="mil-background-grid mil-softened"></div>
             <div class="mil-center">
-              <p class="mil-text-lg mil-up mil-mb-90">
+              <!-- <p class="mil-text-lg mil-up mil-mb-90">
                 It is a long established fact that a reader will be distracted
                 <br />by the readable content.
-              </p>
+              </p> -->
             </div>
             <!-- filter -->
             <!-- <div class="mil-filter mil-up mil-mb-90">
