--- a/project.html
+++ b/project.html
@@ -190,7 +190,7 @@
                 </ul>
               </div>
               <div class="col-lg-3">
-                <h6 class="mil-upper mil-up mil-mb-30">Square Feet</h6>
+                <h6 class="mil-upper mil-up mil-mb-30">Square meter</h6>
                 <ul class="mil-list mil-dark mil-up mil-mb-60">
                   <li>600 m²</li>
                 </ul>
@@ -199,13 +199,13 @@
                 <h6 class="mil-upper mil-up mil-mb-30">Project Component</h6>
                 <ul class="mil-list mil-dark mil-up mil-mb-60">
                   <li>Architectural Design</li>
-                  <li>Shop Drawings Supervision</li>
+                  <li>Shop Drawings</li>
                   <li>Thermal Study</li>
                   <li>Supervision</li>
                 </ul>
               </div>
               <div class="col-lg-3">
-                <h6 class="mil-upper mil-up mil-mb-30">Project manager</h6>
+                <h6 class="mil-upper mil-up mil-mb-30">Client</h6>
                 <ul class="mil-list mil-dark mil-up mil-mb-30">
                   <li>Mr. Ahmed Badereg</li>
                 </ul>
