--- a/project1.html
+++ b/project1.html
@@ -189,7 +189,7 @@
                 </ul>
               </div>
               <div class="col-lg-3">
-                <h6 class="mil-upper mil-up mil-mb-30">Square Feet</h6>
+                <h6 class="mil-upper mil-up mil-mb-30">Square meter</h6>
                 <ul class="mil-list mil-dark mil-up mil-mb-60">
                   <li>2100 m²</li>
                 </ul>
@@ -203,7 +203,7 @@
                 </ul>
               </div>
               <div class="col-lg-3">
-                <h6 class="mil-upper mil-up mil-mb-30">Project manager</h6>
+                <h6 class="mil-upper mil-up mil-mb-30">Client</h6>
                 <ul class="mil-list mil-dark mil-up mil-mb-30">
                   <li>Mr. Ahmed Badereg</li>
                 </ul>
