--- a/project5.html
+++ b/project5.html
@@ -190,7 +190,7 @@
                 </ul>
               </div>
               <div class="col-lg-3">
-                <h6 class="mil-upper mil-up mil-mb-30">Square Feet</h6>
+                <h6 class="mil-upper mil-up mil-mb-30">Square meter</h6>
                 <ul class="mil-list mil-dark mil-up mil-mb-60">
                   <li>10,000 m²</li>
                 </ul>
@@ -204,7 +204,7 @@
                 </ul>
               </div>
               <div class="col-lg-3">
-                <h6 class="mil-upper mil-up mil-mb-30">Project manager</h6>
+                <h6 class="mil-upper mil-up mil-mb-30">Client</h6>
                 <ul class="mil-list mil-dark mil-up mil-mb-30">
                   <li>Mr. Mahmood Saeed</li>
                 </ul>
