few changes from pdf are done

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
               <div class="col-lg-6">
                 <div>
                   <span class="mil-suptitle mil-upper mil-up mil-mb-30"
-                    >Perspective PurpoShop Drawings Supervisionse</span
+                    >Perspective Purpose</span
                   >
                   <h2 class="mil-upper mil-up mil-mb-40">
                     Transforming Spaces, Enriching Lives
