New changes for arabic and in home page images are replaced

--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
                   href="project6.html"
                   class="mil-portfolio-item mil-long-item mil-up mil-mb-30"
                 >
-                  <img src="img/covers/3.png" alt="cover" />
+                  <img src="img/covers/changePic3.png" alt="cover" />
                   <div class="mil-project-descr">
                     <h4 class="mil-upper mil-mb-20">Al Qadiri Center</h4>
                     <div class="mil-divider-sm mil-mb-20"></div>
@@ -694,7 +694,7 @@
                   href="project3.html"
                   class="mil-portfolio-item mil-square-item mil-up mil-mb-30"
                 >
-                  <img src="img/covers/4.png" alt="cover" />
+                  <img src="img/covers/changePic4.png" alt="cover" />
                   <div class="mil-project-descr">
                     <h4 class="mil-upper mil-mb-20">Villa Kattan</h4>
                     <div class="mil-divider-sm mil-mb-20"></div>
@@ -711,7 +711,7 @@
                   href="project9.html"
                   class="mil-portfolio-item mil-square-item mil-up mil-mb-30"
                 >
-                  <img src="img/covers/5.png" alt="cover" />
+                  <img src="img/covers/changePic5.png" alt="cover" />
                   <div class="mil-project-descr">
                     <h4 class="mil-upper mil-mb-20">Rise Cafe</h4>
                     <div class="mil-divider-sm mil-mb-20"></div>
@@ -730,7 +730,7 @@
                   href="project13.html"
                   class="mil-portfolio-item mil-long-item mil-up mil-mb-30"
                 >
-                  <img src="img/covers/6.png" alt="cover" />
+                  <img src="img/covers/changePic6.png" alt="cover" />
                   <div class="mil-project-descr">
                     <h4 class="mil-upper mil-mb-20">Gamthone</h4>
                     <div class="mil-divider-sm mil-mb-20"></div>
@@ -895,7 +895,7 @@
         <!-- core -->
         <section class="mil-dark-bg mil-relative mil-o-hidden">
           <img
-            src="img/photo/18.png"
+            src="img/photo/__4 - Photo.png"
             class="mil-bg-img mil-scale"
             alt="image"
             style="object-position: top"
@@ -1151,10 +1151,10 @@
                 <!-- <li><a href="#.">Twitter</a></li> -->
                 <!-- <li><a href="#.">Youtube</a></li> -->
               </ul>
-              <ul class="mil-light-soft mil-mb-15">
+               <!-- <ul class="mil-light-soft mil-mb-15">
                 <li><a href="#.">Our App</a></li>
                 <li><a href="#.">Sitemap</a></li>
-              </ul>
+              </ul> -->
             </div>
           </div>
         </footer>
