--- a/project2-ar.html
+++ b/project2-ar.html
@@ -190,7 +190,7 @@
                 </ul>
               </div>
               <div class="col-lg-3">
-                <h6 class="mil-upper mil-up mil-mb-30">قدم مربع</h6>
+                <h6 class="mil-upper mil-up mil-mb-30">متر مربع</h6>
                 <ul class="mil-list mil-dark mil-up mil-mb-60">
                   <li>100 م²</li>
                 </ul>
@@ -290,22 +290,22 @@
           <div class="container mil-p-120-60">
             <div class="row">
               <div class="col-md-6 col-lg-6">
-                <div class="mil-prev-project mil-mb-60">
-                  <h4 class="mil-upper mil-up mil-mb-30">المشروع السايق</h4>
-                  <a
-                    href="project1-ar.html"
-                    class="mil-link mil-left-link mil-upper mil-up"
-                    >العمل السابق
+                <div class="mil-next-project mil-mb-60">
+                  <h4 class="mil-upper mil-up mil-mb-30">المشروع التالي</h4>
+                  <a href="project3-ar.html" class="mil-link mil-upper mil-up"
+                    >العمل التالي
                     <span class="mil-arrow"
                       ><img src="img/icons/1.svg" alt="arrow" /></span
                   ></a>
                 </div>
               </div>
               <div class="col-md-6 col-lg-6">
-                <div class="mil-next-project mil-mb-60">
-                  <h4 class="mil-upper mil-up mil-mb-30">المشروع التالي</h4>
-                  <a href="project3-ar.html" class="mil-link mil-upper mil-up"
-                    >العمل التالي
+                <div class="mil-prev-project mil-mb-60">
+                  <h4 class="mil-upper mil-up mil-mb-30">المشروع السايق</h4>
+                  <a
+                    href="project1-ar.html"
+                    class="mil-link mil-left-link mil-upper mil-up"
+                    >العمل السابق
                     <span class="mil-arrow"
                       ><img src="img/icons/1.svg" alt="arrow" /></span
                   ></a>
@@ -441,10 +441,10 @@
                 <!-- <li><a href="#.">Twitter</a></li> -->
                 <!-- <li><a href="#.">Youtube</a></li> -->
               </ul>
-              <ul class="mil-light-soft mil-mb-15">
+               <!-- <ul class="mil-light-soft mil-mb-15">
                 <li><a href="#.">Our App</a></li>
                 <li><a href="#.">Sitemap</a></li>
-              </ul>
+              </ul> -->
             </div>
           </div>
         </footer>
