--- a/project3.html
+++ b/project3.html
@@ -205,7 +205,7 @@
                 </ul>
               </div>
               <div class="col-lg-3">
-                <h6 class="mil-upper mil-up mil-mb-30">Project manager</h6>
+                <h6 class="mil-upper mil-up mil-mb-30">Client</h6>
                 <ul class="mil-list mil-dark mil-up mil-mb-30">
                   <li>Mr. Khaled Kattani</li>
                 </ul>
@@ -436,10 +436,10 @@
                 <!-- <li><a href="#.">Twitter</a></li> -->
                 <!-- <li><a href="#.">Youtube</a></li> -->
               </ul>
-              <ul class="mil-light-soft mil-mb-15">
+               <!-- <ul class="mil-light-soft mil-mb-15">
                 <li><a href="#.">Our App</a></li>
                 <li><a href="#.">Sitemap</a></li>
-              </ul>
+              </ul> -->
             </div>
           </div>
         </footer>
