--- a/services-ar.html
+++ b/services-ar.html
@@ -363,19 +363,19 @@
                 </p> -->
                   <ul class="mil-icon-list mil-mb-60">
                     <li class="mil-up">
-                      <img src="img/icons/11.svg" alt="icon" />"محورية العميل:
+                      <img src="img/icons/11.svg" alt="icon" />محورية العميل
                       <br />
-                      بناء شراكات قوية لضمان الرضا في كل خطوة."
+                      بناء شراكات قوية لضمان الرضا في كل خطوة.
                     </li>
                     <li class="mil-up">
-                      <img src="img/icons/11.svg" alt="icon" />"المساحات
-                      المبتكرة: تصاميم <br />تُلهم، وتتفوق على التوقعات، وترتقي
-                      بجودة الحياة. "
+                      <img src="img/icons/11.svg" alt="icon" />المساحات
+                      المبتكرة تصاميم <br />تُلهم، وتتفوق على التوقعات، وترتقي
+                      بجودة الحياة.
                     </li>
                     <li class="mil-up">
-                      <img src="img/icons/11.svg" alt="icon" />"الريادة في
-                      الإستدامة: ريادة في <br />العمارة الصديقة للبيئة التي تترك
-                      أثر دائما."
+                      <img src="img/icons/11.svg" alt="icon" />الريادة في
+                      الإستدامة ريادة في <br />العمارة الصديقة للبيئة التي تترك
+                      أثر دائما.
                     </li>
                   </ul>
                 </div>
@@ -641,9 +641,9 @@
                 <!-- <li><a href="#.">Twitter</a></li> -->
                 <!-- <li><a href="#.">Youtube</a></li> -->
               </ul>
-              <ul class="mil-light-soft mil-mb-15">
-                <li><a href="#.">Our App</a></li>
-                <li><a href="#.">Sitemap</a></li>
+               <ul class="mil-light-soft mil-mb-15">
+                <li><a href="#.">الموقع</a></li>
+                <!-- <li><a href="#.">Sitemap</a></li> -->
               </ul>
             </div>
           </div>
