--- a/team-member3.html
+++ b/team-member3.html
@@ -249,10 +249,10 @@
                 <!-- <li><a href="#.">Twitter</a></li> -->
                 <!-- <li><a href="#.">Youtube</a></li> -->
               </ul>
-              <ul class="mil-light-soft mil-mb-15">
+               <!-- <ul class="mil-light-soft mil-mb-15">
                 <li><a href="#.">Our App</a></li>
                 <li><a href="#.">Sitemap</a></li>
-              </ul>
+              </ul> -->
             </div>
           </div>
         </footer>
