--- a/team-member5-ar.html
+++ b/team-member5-ar.html
@@ -94,7 +94,7 @@
               <div class="mil-right-side">
                 <div class="mil-p-30-30">
                   <span class="mil-suptitle mil-upper mil-up mil-mb-30"
-                    >امهندس معماري ومناظر طبيعية
+                    >مهندس معماري ومناظر طبيعية
                   </span>
                   <h3 class="mil-upper mil-up mil-mb-30">وهيب الحربي</h3>
                   <!-- <ul class="mil-list mil-dark mil-up mil-mb-30">
@@ -257,9 +257,9 @@
                 <!-- <li><a href="#.">Twitter</a></li> -->
                 <!-- <li><a href="#.">Youtube</a></li> -->
               </ul>
-              <ul class="mil-light-soft mil-mb-15">
-                <li><a href="#.">Our App</a></li>
-                <li><a href="#.">Sitemap</a></li>
+               <ul class="mil-light-soft mil-mb-15">
+                <li><a href="#.">الموقع</a></li>
+                <!-- <li><a href="#.">Sitemap</a></li> -->
               </ul>
             </div>
           </div>
