--- a/about-ar.html
+++ b/about-ar.html
@@ -235,7 +235,7 @@
                     <a href="portfolio-ar.html" class="mil-link mil-upper"
                       >استعرض المشاريع
                       <span class="mil-arrow"
-                        ><img src="img/icons/1.svg" alt="arrow" /></span
+                        ><img src="img/icons/1left.png" alt="arrow" /></span
                     ></a>
                   </div>
                 </div>
@@ -491,7 +491,7 @@
               <div class="col-lg-6">
                 <div class="mil-mb-90">
                   <span class="mil-suptitle mil-upper mil-up mil-mb-30"
-                    >How it Works</span
+                    >كيف نعمل</span
                   >
                   <h2 class="mil-upper mil-up">حلولنا تُقدم</h2>
                 </div>
@@ -859,23 +859,23 @@
                   <a href="services-ar.html" class="mil-link mil-upper mil-up"
                     >عرض الكل
                     <span class="mil-arrow"
-                      ><img src="img/icons/1.svg" alt="arrow" /></span
+                      ><img src="img/icons/1left.png" alt="arrow" /></span
                   ></a>
                 </div>
               </div>
               <div class="col-lg-7">
                 <div class="mil-hover-images mil-up">
                   <ul>
-                    <li class="mil-up">
+                    <!-- <li class="mil-up">
                       <a
                         class="mil-hover-item"
                         href="javascript:"
                         data-src="img/abouts/1.png"
-                      >
+                      > -->
                         <!-- <p>2022</p> -->
-                        <span class="mil-h4"> المعماري الخدمات </span>
+                        <!-- <span class="mil-h4"> المعماري الخدمات </span>
                       </a>
-                    </li>
+                    </li> -->
                     <li class="mil-up">
                       <a
                         class="mil-hover-item"
@@ -1085,10 +1085,10 @@
                 <!-- <li><a href="#.">Twitter</a></li> -->
                 <!-- <li><a href="#.">Youtube</a></li> -->
               </ul>
-              <ul class="mil-light-soft mil-mb-15">
+               <!-- <ul class="mil-light-soft mil-mb-15">
                 <li><a href="#.">Our App</a></li>
                 <li><a href="#.">Sitemap</a></li>
-              </ul>
+              </ul> -->
             </div>
           </div>
         </footer>
