--- a/portfolio-ar.html
+++ b/portfolio-ar.html
@@ -118,7 +118,7 @@
             <div class="mil-filter mil-up mil-mb-90">
               <div class="mil-filter-links">
                 <a href="#" data-filter="*" class="mil-current">الكل</a>
-                <a href="#" data-filter=".الهندسة المعمارية" class=""
+                <a href="#" data-filter= ".architecture" class=""
                   >التصميم المعماري
                 </a>
                 <a href="#" data-filter=".interior" class=""
@@ -136,7 +136,7 @@
                 <div class="mil-portfolio-grid mil-up">
                   <div class="grid-sizer"></div>
 
-                  <div class="mil-grid-item الهندسة المعمارية">
+                  <div class="mil-grid-item architecture">
                     <a
                       href="project-ar.html"
                       class="mil-portfolio-item-2 mil-square-item mil-mb-30"
@@ -157,7 +157,7 @@
                       <div class="mil-category">الهندسة المعمارية</div>
                     </a>
                   </div>
-                  <div class="mil-grid-item الهندسة المعمارية">
+                  <div class="mil-grid-item architecture">
                     <a
                       href="project1-ar.html"
                       class="mil-portfolio-item-2 mil-square-item mil-mb-30"
@@ -178,7 +178,7 @@
                       <div class="mil-category">الهندسة المعمارية</div>
                     </a>
                   </div>
-                  <div class="mil-grid-item الهندسة المعمارية">
+                  <div class="mil-grid-item architecture">
                     <a
                       href="project2-ar.html"
                       class="mil-portfolio-item-2 mil-square-item mil-mb-30"
@@ -200,7 +200,7 @@
                     </a>
                   </div>
 
-                  <div class="mil-grid-item الهندسة المعمارية">
+                  <div class="mil-grid-item architecture">
                     <a
                       href="project3-ar.html"
                       class="mil-portfolio-item-2 mil-square-item mil-mb-30"
@@ -222,7 +222,7 @@
                     </a>
                   </div>
 
-                  <div class="mil-grid-item الهندسة المعمارية">
+                  <div class="mil-grid-item architecture">
                     <a
                       href="project4-ar.html"
                       class="mil-portfolio-item-2 mil-square-item mil-mb-30"
@@ -244,7 +244,7 @@
                     </a>
                   </div>
 
-                  <div class="mil-grid-item الهندسة المعمارية">
+                  <div class="mil-grid-item architecture">
                     <a
                       href="project5-ar.html"
                       class="mil-portfolio-item-2 mil-square-item mil-mb-30"
@@ -265,7 +265,7 @@
                       <div class="mil-category">الهندسة المعمارية</div>
                     </a>
                   </div>
-                  <div class="mil-grid-item الهندسة المعمارية">
+                  <div class="mil-grid-item architecture">
                     <a
                       href="project6-ar.html"
                       class="mil-portfolio-item-2 mil-square-item mil-mb-30"
@@ -666,9 +666,9 @@
                 <!-- <li><a href="#.">Twitter</a></li> -->
                 <!-- <li><a href="#.">Youtube</a></li> -->
               </ul>
-              <ul class="mil-light-soft mil-mb-15">
-                <li><a href="#.">Our App</a></li>
-                <li><a href="#.">Sitemap</a></li>
+               <ul class="mil-light-soft mil-mb-15">
+                <li><a href="#.">الموقع</a></li>
+                <!-- <li><a href="#.">Sitemap</a></li> -->
               </ul>
             </div>
           </div>
