--- a/project14-ar.html
+++ b/project14-ar.html
@@ -129,7 +129,7 @@
                 </ul>
               </div>
               <div class="col-lg-3">
-                <h6 class="mil-upper mil-up mil-mb-30">قدم مربع</h6>
+                <h6 class="mil-upper mil-up mil-mb-30">متر مربع</h6>
                 <ul class="mil-list mil-dark mil-up mil-mb-60">
                   <li>600 م²</li>
                 </ul>
@@ -142,7 +142,7 @@
                 </ul>
               </div>
               <div class="col-lg-3">
-                <h6 class="mil-upper mil-up mil-mb-30">العميل (Client)</h6>
+                <h6 class="mil-upper mil-up mil-mb-30">العميل </h6>
                 <ul class="mil-list mil-dark mil-up mil-mb-30">
                   <li>السيد/ أحمد بادريق</li>
                 </ul>
@@ -230,6 +230,16 @@
         <section>
           <div class="container mil-p-120-60">
             <div class="row">
+               <div class="col-md-6 col-lg-6">
+                <div class="mil-next-project mil-mb-60">
+                  <h4 class="mil-upper mil-up mil-mb-30">المشروع التالي</h4>
+                  <a href="project15-ar.html" class="mil-link mil-upper mil-up"
+                    >العمل التالي
+                    <span class="mil-arrow"
+                      ><img src="img/icons/1.svg" alt="arrow" /></span
+                  ></a>
+                </div>
+              </div>
               <div class="col-md-6 col-lg-6">
                 <div class="mil-prev-project mil-mb-60">
                   <h4 class="mil-upper mil-up mil-mb-30">المشروع السابق</h4>
@@ -237,16 +247,6 @@
                     href="project13-ar.html"
                     class="mil-link mil-left-link mil-upper mil-up"
                     >العمل السابق
-                    <span class="mil-arrow"
-                      ><img src="img/icons/1.svg" alt="arrow" /></span
-                  ></a>
-                </div>
-              </div>
-              <div class="col-md-6 col-lg-6">
-                <div class="mil-next-project mil-mb-60">
-                  <h4 class="mil-upper mil-up mil-mb-30">المشروع التالي</h4>
-                  <a href="project15-ar.html" class="mil-link mil-upper mil-up"
-                    >العمل التالي
                     <span class="mil-arrow"
                       ><img src="img/icons/1.svg" alt="arrow" /></span
                   ></a>
@@ -382,9 +382,9 @@
                 <!-- <li><a href="#.">Twitter</a></li> -->
                 <!-- <li><a href="#.">Youtube</a></li> -->
               </ul>
-              <ul class="mil-light-soft mil-mb-15">
-                <li><a href="#.">Our App</a></li>
-                <li><a href="#.">Sitemap</a></li>
+               <ul class="mil-light-soft mil-mb-15">
+                <li><a href="#.">الموقع</a></li>
+                <!-- <li><a href="#.">Sitemap</a></li> -->
               </ul>
             </div>
           </div>
