--- a/team-member1-ar.html
+++ b/team-member1-ar.html
@@ -94,7 +94,7 @@
               <div class="mil-right-side">
                 <div class="mil-p-30-30">
                   <span class="mil-suptitle mil-upper mil-up mil-mb-30">
-                    الهندسة المعمارية & التصميم Manager, BIM expert
+                    مدير الهندسة المعمارية والتصميم، خبير  BIM
                   </span>
                   <h3 class="mil-upper mil-up mil-mb-30">كمال عشيري</h3>
 
@@ -240,9 +240,9 @@
                 <!-- <li><a href="#.">Twitter</a></li> -->
                 <!-- <li><a href="#.">Youtube</a></li> -->
               </ul>
-              <ul class="mil-light-soft mil-mb-15">
-                <li><a href="#.">Our App</a></li>
-                <li><a href="#.">Sitemap</a></li>
+               <ul class="mil-light-soft mil-mb-15">
+                <li><a href="#.">الموقع</a></li>
+                <!-- <li><a href="#.">Sitemap</a></li> -->
               </ul>
             </div>
           </div>
