--- a/team-member4-ar.html
+++ b/team-member4-ar.html
@@ -256,9 +256,9 @@
                 <!-- <li><a href="#.">Twitter</a></li> -->
                 <!-- <li><a href="#.">Youtube</a></li> -->
               </ul>
-              <ul class="mil-light-soft mil-mb-15">
-                <li><a href="#.">Our App</a></li>
-                <li><a href="#.">Sitemap</a></li>
+               <ul class="mil-light-soft mil-mb-15">
+                <li><a href="#.">الموقع</a></li>
+                <!-- <li><a href="#.">Sitemap</a></li> -->
               </ul>
             </div>
           </div>
