Did the final changes for icons and architectural designs

--- a/index-ar.html
+++ b/index-ar.html
@@ -281,7 +281,7 @@
                 <div class="col-sm-3">
   <a href="services-ar.html" class="mil-icon-box mil-sm-center mil-mb-30">
     <div class="mil-icon mil-icon-accent-bg mil-up mil-mb-30">
-      <img src="img/icons/3.svg" alt="icon" />
+      <img src="img/icons/Architectural services .png" alt="icon" />
     </div>
     <h6 class="mil-upper mil-up" dir="rtl" style="unicode-bidi: bidi-override;">
       الخدمات<br />
@@ -293,7 +293,7 @@
 <div class="col-sm-3">
   <a href="services-ar.html" class="mil-icon-box mil-sm-center mil-mb-30">
     <div class="mil-icon mil-icon-accent-bg mil-up mil-mb-30">
-      <img src="img/icons/4.svg" alt="icon" />
+      <img src="img/icons/project management .png" alt="icon" />
     </div>
     <h6 class="mil-upper mil-up" dir="rtl" style="unicode-bidi: bidi-override;">
       إدارة<br />
@@ -305,7 +305,7 @@
 <div class="col-sm-3">
   <a href="services-ar.html" class="mil-icon-box mil-sm-center mil-mb-30">
     <div class="mil-icon mil-icon-accent-bg mil-up mil-mb-30">
-      <img src="img/icons/5.svg" alt="icon" />
+      <img src="img/icons/sustainability consulting .png" alt="icon" />
     </div>
     <h6 class="mil-upper mil-up" dir="rtl" style="unicode-bidi: bidi-override;">
       استشارات<br />
@@ -317,7 +317,7 @@
                 <div class="col-sm-3">
   <a href="services-ar.html" class="mil-icon-box mil-sm-center mil-mb-30">
     <div class="mil-icon mil-icon-accent-bg mil-up mil-mb-20">
-      <img src="img/icons/15.1.svg" alt="icon" width="30px" height="30px" />
+      <img src="img/icons/Media & presentation services .png" alt="icon" width="30px" height="30px" />
     </div>
     <h6 class="mil-upper mil-up" style="margin-top: 5px" dir="rtl" style="unicode-bidi: bidi-override;">
       خدمات<br />
@@ -520,7 +520,7 @@
           <div class="row">
             <div class="col-md-6 col-lg-3">
               <a href="project1-ar.html" class="mil-portfolio-item mil-square-item mil-up mil-mb-30">
-                <img src="img/covers/1.png" alt="cover" />
+                <img src="img/covers/1new.png" alt="cover" />
                 <div class="mil-project-descr">
                   <h4 class="mil-upper mil-mb-20">مشروع كوكليكو</h4>
                   <div class="mil-divider-sm mil-mb-20"></div>
@@ -533,22 +533,22 @@
               </a>
 
               <a href="project-ar.html" class="mil-portfolio-item mil-square-item mil-up mil-mb-30">
-                <img src="img/covers/2.png" alt="cover" />
+                <img src="img/covers/2new.png" alt="cover" />
                 <div class="mil-project-descr">
                   <h4 class="mil-upper mil-mb-20">فيلا بادريق</h4>
                   <div class="mil-divider-sm mil-mb-20"></div>
                   <ul class="mil-list mil-dark mil-up mil-mb-60">
-                    <li>المعماري التصميم</li>
-                    <li>الرسومات التنفيذية</li>
-                    <li>دراسة حرارية</li>
-                    <li>الإشراف</li>
+                    <li>Landscape Design</li>
+                    <li>3D Renders</li>
+                    <!-- <li>دراسة حرارية</li>
+                    <li>الإشراف</li> -->
                   </ul>
                 </div>
               </a>
             </div>
             <div class="col-md-6 col-lg-3">
               <a href="project6-ar.html" class="mil-portfolio-item mil-long-item mil-up mil-mb-30">
-                <img src="img/covers/changePic3.png" alt="cover" />
+                <img src="img/covers/5new.png" alt="cover" />
                 <div class="mil-project-descr">
                   <h4 class="mil-upper mil-mb-20">مركز القادري</h4>
                   <div class="mil-divider-sm mil-mb-20"></div>
@@ -577,7 +577,7 @@
               </a>
 
               <a href="project9-ar.html" class="mil-portfolio-item mil-square-item mil-up mil-mb-30">
-                <img src="img/covers/changePic5.png" alt="cover" />
+                <img src="img/covers/Image68.png" alt="cover" />
                 <div class="mil-project-descr">
                   <h4 class="mil-upper mil-mb-20">رايز كافيه</h4>
                   <div class="mil-divider-sm mil-mb-20"></div>
@@ -593,7 +593,7 @@
             </div>
             <div class="col-md-6 col-lg-3">
               <a href="project13-ar.html" class="mil-portfolio-item mil-long-item mil-up mil-mb-30">
-                <img src="img/covers/changePic6.png" alt="cover" />
+                <img src="img/covers/Scene 9.png" alt="cover" />
                 <div class="mil-project-descr">
                   <h4 class="mil-upper mil-mb-20">جامثون</h4>
                   <div class="mil-divider-sm mil-mb-20"></div>
@@ -627,7 +627,7 @@
             <div class="col-lg-4">
               <div class="mil-hww mil-icon-box mil-up mil-mb-60">
                 <div class="mil-icon mil-icon-border mil-mb-30">
-                  <img src="img/icons/7.svg" alt="icon" />
+                  <img src="img/icons/energyEfficiency.png" alt="icon" />
                 </div>
                 <h4 class="mil-upper mil-mb-20">كفاءة الطاقة</h4>
                 <div class="mil-divider-sm mil-mb-20"></div>
@@ -637,7 +637,7 @@
             <div class="col-lg-4">
               <div class="mil-hww mil-icon-box mil-up mil-mb-60">
                 <div class="mil-icon mil-icon-border mil-mb-30">
-                  <img src="img/icons/8.svg" alt="icon" />
+                  <img src="img/icons/regulatoryCompilance.png" alt="icon" />
                 </div>
                 <h4 class="mil-upper mil-mb-20">الامتثال للأنظمة</h4>
                 <div class="mil-divider-sm mil-mb-20"></div>
@@ -647,7 +647,7 @@
             <div class="col-lg-4">
               <div class="mil-hww mil-icon-box mil-up mil-mb-60">
                 <div class="mil-icon mil-icon-border mil-mb-30">
-                  <img src="img/icons/9.svg" alt="icon" />
+                  <img src="img/icons/durabilityNew.png" alt="icon" />
                 </div>
                 <h4 class="mil-upper mil-mb-20">المتانة</h4>
                 <div class="mil-divider-sm mil-mb-20"></div>
@@ -657,7 +657,7 @@
             <div class="col-lg-4">
               <div class="mil-hww mil-icon-box mil-up mil-mb-60">
                 <div class="mil-icon mil-icon-border mil-mb-30">
-                  <img src="img/icons/7.svg" alt="icon" />
+                  <img src="img/icons/optimizedSystems.png" alt="icon" />
                 </div>
                 <h4 class="mil-upper mil-mb-20">أنظمة محسّنة</h4>
                 <div class="mil-divider-sm mil-mb-20"></div>
@@ -667,7 +667,7 @@
             <div class="col-lg-4">
               <div class="mil-hww mil-icon-box mil-up mil-mb-60">
                 <div class="mil-icon mil-icon-border mil-mb-30">
-                  <img src="img/icons/8.svg" alt="icon" />
+                  <img src="img/icons/enhancedComfort.png" alt="icon" />
                 </div>
                 <h4 class="mil-upper mil-mb-20">راحة محسّنة</h4>
                 <div class="mil-divider-sm mil-mb-20"></div>
@@ -677,7 +677,7 @@
             <div class="col-lg-4">
               <div class="mil-hww mil-icon-box mil-up mil-mb-60">
                 <div class="mil-icon mil-icon-border mil-mb-30">
-                  <img src="img/icons/9.svg" alt="icon" />
+                  <img src="img/icons/sustainabilityNew.png" alt="icon" />
                 </div>
                 <h4 class="mil-upper mil-mb-20">الاستدامة</h4>
                 <div class="mil-divider-sm mil-mb-20"></div>
