--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                       class="mil-icon-box mil-sm-center mil-mb-30"
                     >
                       <div class="mil-icon mil-icon-accent-bg mil-up mil-mb-30">
-                        <img src="img/icons/3.svg" alt="icon" />
+                        <img src="img/icons/Architectural services .png" alt="icon" />
                       </div>
                       <h6 class="mil-upper mil-up">
                         Architectural <br />
@@ -370,7 +370,7 @@
                       class="mil-icon-box mil-sm-center mil-mb-30"
                     >
                       <div class="mil-icon mil-icon-accent-bg mil-up mil-mb-30">
-                        <img src="img/icons/4.svg" alt="icon" />
+                        <img src="img/icons/project management .png" alt="icon" />
                       </div>
                       <h6 class="mil-upper mil-up">
                         Project <br />
@@ -384,7 +384,7 @@
                       class="mil-icon-box mil-sm-center mil-mb-30"
                     >
                       <div class="mil-icon mil-icon-accent-bg mil-up mil-mb-30">
-                        <img src="img/icons/5.svg" alt="icon" />
+                        <img src="img/icons/sustainability consulting .png" alt="icon" />
                       </div>
                       <h6 class="mil-upper mil-up">
                         Sustainability <br />
@@ -399,7 +399,7 @@
                     >
                       <div class="mil-icon mil-icon-accent-bg mil-up mil-mb-20">
                         <img
-                          src="img/icons/15.1.svg"
+                          src="img/icons/Media & presentation services .png"
                           alt="icon"
                           width="30px"
                           height="30px"
@@ -642,7 +642,7 @@
                   href="project1.html"
                   class="mil-portfolio-item mil-square-item mil-up mil-mb-30"
                 >
-                  <img src="img/covers/1.png" alt="cover" />
+                  <img src="img/covers/1new.png" alt="cover" />
                   <div class="mil-project-descr">
                     <h4 class="mil-upper mil-mb-20">Coquelicot Project</h4>
                     <div class="mil-divider-sm mil-mb-20"></div>
@@ -658,15 +658,15 @@
                   href="project.html"
                   class="mil-portfolio-item mil-square-item mil-up mil-mb-30"
                 >
-                  <img src="img/covers/2.png" alt="cover" />
+                  <img src="img/covers/2new.png" alt="cover" />
                   <div class="mil-project-descr">
                     <h4 class="mil-upper mil-mb-20">Villa Badereg</h4>
                     <div class="mil-divider-sm mil-mb-20"></div>
                     <ul class="mil-list mil-dark mil-up mil-mb-60">
-                      <li>Architectural Design</li>
-                      <li>Shop Drawings Supervision</li>
-                      <li>Thermal Study</li>
-                      <li>Supervision</li>
+                      <li>Landscape Design </li>
+                      <li>3D Renders</li>
+                      <!-- <li>Thermal Study</li>
+                      <li>Supervision</li> -->
                     </ul>
                   </div>
                 </a>
@@ -676,7 +676,7 @@
                   href="project6.html"
                   class="mil-portfolio-item mil-long-item mil-up mil-mb-30"
                 >
-                  <img src="img/covers/changePic3.png" alt="cover" />
+                  <img src="img/covers/5new.png" alt="cover" />
                   <div class="mil-project-descr">
                     <h4 class="mil-upper mil-mb-20">Al Qadiri Center</h4>
                     <div class="mil-divider-sm mil-mb-20"></div>
@@ -711,7 +711,7 @@
                   href="project9.html"
                   class="mil-portfolio-item mil-square-item mil-up mil-mb-30"
                 >
-                  <img src="img/covers/changePic5.png" alt="cover" />
+                  <img src="img/covers/Image68.png" alt="cover" />
                   <div class="mil-project-descr">
                     <h4 class="mil-upper mil-mb-20">Rise Cafe</h4>
                     <div class="mil-divider-sm mil-mb-20"></div>
@@ -730,7 +730,8 @@
                   href="project13.html"
                   class="mil-portfolio-item mil-long-item mil-up mil-mb-30"
                 >
-                  <img src="img/covers/changePic6.png" alt="cover" />
+                <!-- same -->
+                  <img src="img/covers/Scene 9.png" alt="cover" />
                   <div class="mil-project-descr">
                     <h4 class="mil-upper mil-mb-20">Gamthone</h4>
                     <div class="mil-divider-sm mil-mb-20"></div>
@@ -764,7 +765,7 @@
               <div class="col-lg-4">
                 <div class="mil-hww mil-icon-box mil-up mil-mb-60">
                   <div class="mil-icon mil-icon-border mil-mb-30">
-                    <img src="img/icons/7.svg" alt="icon" />
+                    <img src="img/icons/energyEfficiency.png" alt="icon" />
                   </div>
                   <h4 class="mil-upper mil-mb-20">Energy Efficiency</h4>
                   <div class="mil-divider-sm mil-mb-20"></div>
@@ -774,7 +775,7 @@
               <div class="col-lg-4">
                 <div class="mil-hww mil-icon-box mil-up mil-mb-60">
                   <div class="mil-icon mil-icon-border mil-mb-30">
-                    <img src="img/icons/8.svg" alt="icon" />
+                    <img src="img/icons/regulatoryCompilance.png" alt="icon" />
                   </div>
                   <h4 class="mil-upper mil-mb-20">Regulatory Compliance</h4>
                   <div class="mil-divider-sm mil-mb-20"></div>
@@ -784,7 +785,7 @@
               <div class="col-lg-4">
                 <div class="mil-hww mil-icon-box mil-up mil-mb-60">
                   <div class="mil-icon mil-icon-border mil-mb-30">
-                    <img src="img/icons/9.svg" alt="icon" />
+                    <img src="img/icons/durabilityNew.png" alt="icon" />
                   </div>
                   <h4 class="mil-upper mil-mb-20">Durability</h4>
                   <div class="mil-divider-sm mil-mb-20"></div>
@@ -794,7 +795,7 @@
               <div class="col-lg-4">
                 <div class="mil-hww mil-icon-box mil-up mil-mb-60">
                   <div class="mil-icon mil-icon-border mil-mb-30">
-                    <img src="img/icons/7.svg" alt="icon" />
+                    <img src="img/icons/optimizedSystems.png" alt="icon" />
                   </div>
                   <h4 class="mil-upper mil-mb-20">Optimized Systems</h4>
                   <div class="mil-divider-sm mil-mb-20"></div>
@@ -804,7 +805,7 @@
               <div class="col-lg-4">
                 <div class="mil-hww mil-icon-box mil-up mil-mb-60">
                   <div class="mil-icon mil-icon-border mil-mb-30">
-                    <img src="img/icons/8.svg" alt="icon" />
+                    <img src="img/icons/enhancedComfort.png" alt="icon" />
                   </div>
                   <h4 class="mil-upper mil-mb-20">Enhanced Comfort</h4>
                   <div class="mil-divider-sm mil-mb-20"></div>
@@ -814,7 +815,7 @@
               <div class="col-lg-4">
                 <div class="mil-hww mil-icon-box mil-up mil-mb-60">
                   <div class="mil-icon mil-icon-border mil-mb-30">
-                    <img src="img/icons/9.svg" alt="icon" />
+                    <img src="img/icons/sustainabilityNew.png" alt="icon" />
                   </div>
                   <h4 class="mil-upper mil-mb-20">Sustainability</h4>
                   <div class="mil-divider-sm mil-mb-20"></div>
