--- a/project1-ar.html
+++ b/project1-ar.html
@@ -186,7 +186,7 @@
               <div class="col-lg-3">
                 <h6 class="mil-upper mil-up mil-mb-30">الموقع</h6>
                 <ul class="mil-list mil-dark mil-up mil-mb-60">
-                  <li>جدة، حي المحمدية</li>
+                  <!-- <li>جدة، حي المحمدية</li> -->
                 </ul>
               </div>
               <div class="col-lg-3">
@@ -206,7 +206,7 @@
               <div class="col-lg-3">
                 <h6 class="mil-upper mil-up mil-mb-30">العميل </h6>
                 <ul class="mil-list mil-dark mil-up mil-mb-30">
-                  <li>السيد/ أحمد بادريق</li>
+                  <!-- <li>السيد/ أحمد بادريق</li> -->
                 </ul>
               </div>
             </div>
