Arabic translation done

--- a/index-ar.html
+++ b/index-ar.html
@@ -538,8 +538,8 @@
                   <h4 class="mil-upper mil-mb-20">فيلا بادريق</h4>
                   <div class="mil-divider-sm mil-mb-20"></div>
                   <ul class="mil-list mil-dark mil-up mil-mb-60">
-                    <li>Landscape Design</li>
-                    <li>3D Renders</li>
+                    <li>تصميم المناظر الطبيعية</li>
+                    <li>عروض ثلاثية الأبعاد</li>
                     <!-- <li>دراسة حرارية</li>
                     <li>الإشراف</li> -->
                   </ul>
